--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,3 +1,3 @@
 steps:
-  - name: 'gcr.io/gcpug-nouhau2web/nouhau2web:v0.0.4'
-    args: ['-dir', '.']
+  - name: 'gcr.io/gcpug-nouhau2web/nouhau2web:v0.0.5'
+    args: ['-dir', '.', '-bucket', 'gcpug-nouhau-dev']
